blog/styles/app.css
body {
  --main-page-color: #19181A;
  --article-heading-color: #DF9A10;
  --subtext-color: #B19F9E;
  --article-main-text-color: #B19F9E;
  --nav-list-color: #B19F9E;

  /* --main-page-color: white;
  --article-heading-color: black;
  --subtext-color: black;
  --article-main-text-color: black;
  --nav-list-color: black; */

  /* font-family: 'Playfair Display', serif; */
  font-family: 'Josefin Sans', sans-serif;
font-family: 'Roboto', sans-serif;
  
  max-width: 70%;
  margin: auto;

 background-color: var(--main-page-color, #19181A);
}



main{
  display: flex;
  flex-direction: row;
}
ul, ol{
  padding-bottom: 1vw;
}

li {
  color: var(--article-main-text-color, #7F7F7F);
  padding: 0.5vw 0vw 0.5vw 0vw;
  font-size: 1.2em;
}
p {
  font-size: 1.2em;
  color: var(--article-main-text-color, #7F7F7F);
}

h1{
  color: var(--article-heading-color, #DF9A10);
  font-size: 3em;
}

h2 {
 color: var(--article-heading-color, #DF9A10);
 font-weight: 300;
 text-align: center;
 line-height: 1px;
}
.cheat-sheet-section h2 {
  color: var(--article-heading-color, #DF9A10);
 font-weight: 800;
 text-align: left;
 line-height: 1px;
 font-size: 2rem;
 margin-top: 3vw;
}


h3{
  font-size: 1.5em;
  color: var(--subtext-color, #7F7F7F);
  text-align: center;
  font-style: italic;
  font-weight: 400;
}

h4{
  color: var(--subtext-color, #7F7F7F);
  font-size: 1.2em;
}


nav{
  display: flex;
  justify-content: center;
  flex-direction: row;
  margin-top: 2vw;
  width: 10vw;
  margin-right: 2vw;
  font-weight: 100;
  font-size: 1.4em;
}

header{
display: flex;
justify-content: space-between;
flex-direction: row;
margin-bottom: 1.5vw;
}

code{
  color: var(--code-color, #ac46a1);
  font-size: 1.2em;
}

#id-v-s b{
  color: var(--article-heading-color, #DF9A10);
}

#side-archive-btn{
  margin-top: 5vw;
}

.logo {
  font-size: 3rem;
  font-weight: 200;
  
}
.logo a{
  text-decoration: none;
  color: var(--article-heading-color, #DF9A10);
}

.logo a:hover{
  color: var(--nav-list-color, #B19F9E);

}
.latest-article{
  display: flex;
  justify-content: center;
  flex-direction: column;
  width: 45vw;
}

.latest-article img{
  width: 45vw;
  height: auto;
}

.latest-article h1{
  color: var(--article-heading-color, #DF9A10);
  font-size: 2rem;
}

.nav-list {
  padding-top: 1vw;
  padding-left: 0.5vw;
}

.nav-list a{
  text-decoration: none;
  /* color: var(--nav-list-color, #B19F9E); */
  color: var(--article-heading-color, #DF9A10);
}

.nav-list a:hover {
  color: var(--nav-list-color, #B19F9E);
}
.continue{
  text-align: right;
  padding-bottom: 3vw;
}
.continue a{
  color: var(--article-heading-color, #DF9A10);
  text-decoration: none;
}

.continue a:hover{
  color: var(--article-main-text-color, #7F7F7F);
  text-decoration: underline;
}

.text-content{
  padding: 0vw 4vw 0vw 2vw;
}

.text-content h1{
  font-size: 2vw;
  font-weight: 300;
  text-align: center;
  line-height: 1px;
}

 .blog-post-section{
   display: flex;
   flex-direction: column;
  margin-top: 3vw;
  margin-bottom: 3vw;
} 

.blog-post-section img{
  width: 30vw;
  height: auto;
  margin-left: auto;
  margin-right: auto;
}

.blog-post-section h2{
  font-weight: 500;
  font-size: 2rem;
}
.blog-post-section a{
  color: var(--article-heading-color, #DF9A10)
}
.blog-post-section a:hover{
  color: var(--article-heading-color, #DF9A10)
}

.side-articles{
  width: 15vw;
  margin-left: 6vw; 
}

.side-articles a{
  text-decoration: none;
}

.side-articles img{
  width: 15vw;
  height: 7vw;
}

.side-article-heading p{
  font-size: 2vw;
  font-weight: 400;
  color: var(--article-heading-color, #DF9A10);
  text-align: center;
}
.s-article-container{
  margin-bottom: 2vw;
  }
  
.s-article-container:hover{
    opacity: 70%;
  }

.s-article-container h2{
    margin-bottom: 2vw;
    font-size: 1.5vw;
    }

.archive-v {
  margin-bottom: 5vw;
}

.archive-v button{
    width:45vw;
    background-color: var(--main-page-color, #19181A);
    border: solid var(--article-heading-color, #DF9A10);
    }

  button.pointer{
     cursor: pointer;
    }
  
 .archive-v button:hover{
      width:45vw;
      background-color: var(--main-page-color, #19181A);
      border: solid var(--article-main-text-color, #7F7F7F);
      
    }
    /* .archive-v h2:hover{
      color: var(--article-main-text-color, #7F7F7F);
    } */

    footer{
      display: flex;
      align-items: center;
      justify-content: center;
    }

  

@media screen and (max-width: 1000px) {
      main{
        display: flex;
        flex-direction: column;
        align-items: center;
      }

      body{
        max-width: 90%;
        margin: auto;
      }

      nav{
        display: flex;
        justify-content: center;
        flex-direction: row;
        margin-top: 3vw;
        margin-bottom:3vw;
        width: 10vw;
        margin-right:10%;
      }
      .latest-article h1{
        color: var(--article-heading-color, #DF9A10);
        font-size: 3rem;
      
      }

      .latest-article{
        width:90%;
      }

      .latest-article img{
        width: 80vw;
        height: auto;
        
      }
      
      .latest-article-img {
        display: flex;
        flex-direction: column;
        align-items: center;
      }

        .side-articles{
          display: none;}
    
     }
 @media screen and (max-width: 700px) {
      header{
        display: flex;
        justify-content: center;
        flex-direction: row;
        margin-bottom: 1.5vw;
        }

        nav{
          display: flex;
          justify-content: center;
          flex-direction: column;
          margin-top: 2vw;
          margin-bottom:3vw;
          width: 10vw;
          margin-left: 60%;
        }
        
        .nav-list {
          padding-top: 1vw;
          padding-left: 0.5vw;
        }
        .side-articles{
          display:none ;
        }
        
       
       
    }

@media screen and (max-width: 530px) {
      

        nav{
          display: flex;
          justify-content: center;
          flex-direction: column;
          align-items: center;
          width: 10vw;
          margin-left: 40%;
        }

    #about{
      margin-bottom: 1vw;
    }
    #contacts{
      margin-top: 1vw;
    }

    #archive {
      margin-top: 1vw;
    }

    .latest-article h1{
      color: var(--article-heading-color, #DF9A10);
      font-size: 2rem;
    }

    }

    /* @media screen and (min-width: 701px){
      .archive-v{
      display: none;
     }
    }  */

